# rustport

./: .gitignore  Cargo.toml  README.md  demo.tape  justfile  rustport-update.c
assets/: passport_title.txt  rustport_title.txt
src/: cmd.rs  lib.rs  main.rs  net.rs  utilities.rs
src/auth/: mod.rs
src/cmd/: add.rs  alias.rs  config.rs  edit.rs  generate.rs  get.rs  help.rs  init.rs  login.rs  logout.rs  ls.rs  register.rs  rm.rs  rsacc.rs  status.rs  update.rs  version.rs  view.rs
src/net/: add.rs  edit.rs  get.rs  health.rs  list.rs  login.rs  remove.rs  reset.rs  signup.rs  singout.rs  valid.rs
src/parse/: mod.rs
src/utilities/: file.rs
