[package]
name = "rustport"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
color-print = "0.3.7"
openssl = "0.10.75"
rand = "0.8"
reqwest = {version = "0.13.1"}
rsa = "0.9.10"
rsa_ext = "0.1.2"
scanpw = "1.0.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = {version = "1.49.0", features = ["macros", "rt-multi-thread"]}
