[package]
name = "rp"
version = "1.3.4"
edition = "2024"

[dependencies]
arboard = "3.6.1"
async-process = "2.5.0"
base64 = "0.22.1"
color-print = "0.3.7"
edit = "0.1.5"
openssl = "0.10.75"
rand = "0.8"
regex = "1.12.3"
reqwest = {version = "0.13.1"}
rsa = "0.9.10"
rsa_ext = "0.1.2"
scanpw = "1.0.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = {version = "1.49.0", features = ["macros", "rt-multi-thread"]}
toml = "1.0.6"
version-compare = "0.2.1"
